--- a/QUAC_SYS/client/src/components/Footer/styles.css
+++ b/QUAC_SYS/client/src/components/Footer/styles.css
@@ -1,15 +1,20 @@
 .footer-basic {
-    padding:40px 0;
+    margin:60px 0;
     color:#4b4c4d;
     position:absolute;
     width:100%;
-  }
+    height: 200px;
+}
+
+  .social{
+    margin-top: 40px;
+}
   
   .footer-basic ul {
     padding:0;
     list-style:none;
     text-align:center;
-    font-size:18px;
+    font-size:14px;
     line-height:1.6;
     margin-bottom:0;
   }
@@ -66,3 +71,27 @@
 .list-inline{
     color: #868686;
 }
+
+
+
+/* Small - Tablets */
+@media screen and (min-width: 600px) {
+  
+}
+/* Medium - Landscape tablets */
+@media screen and (min-width: 768px) {
+  
+}
+/* Large - notebooks/desktops */
+@media screen and (min-width: 1024px) {
+  .onda{
+    margin-top: 60px;
+  }
+}        
+
+/* Extra large - notebooks/desktops */
+@media screen and (min-width: 1200px) {
+ 
+  
+}  
+
