--- a/QUAC_SYS/client/src/components/Footer/styles.css
+++ b/QUAC_SYS/client/src/components/Footer/styles.css
@@ -1,8 +1,9 @@
 .footer-basic {
-    padding:40px 0;
+    margin:40px 0;
     color:#4b4c4d;
     position:absolute;
     width:100%;
+    
   }
   
   .footer-basic ul {
