--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -1,280 +1,309 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-
-
-body{
-	font-family: 'Poppins', sans-serif;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 1.7;
-	color: #c4c3ca;
-	background-color: #1b1b1b;
-	overflow-x: hidden;
+body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 1.7;
+    color: #c4c3ca;
+    overflow-x: hidden;
 }
+
 a {
-	cursor: pointer;
-  transition: all 200ms linear;
+    cursor: pointer;
+    transition: all 200ms linear;
 }
+
 a:hover {
-	text-decoration: none;
+    text-decoration: none;
 }
+
 .link {
-  color: #c4c3ca;
+    color: #c4c3ca;
 }
+
 .link:hover {
-  color: #ffeba7;
+    color: #ffeba7;
 }
+
 p {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.7;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.7;
 }
+
 h4 {
-  font-weight: 600;
-  margin-top: 40px;
-  padding: 0 0 0 0;
+    font-weight: 600;
+    margin-top: 40px;
+    padding: 0 0 0 0;
 }
-h6 span{
-  padding: 0 20px;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: rgb(216, 212, 212);
+
+h6 span {
+    padding: 0 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: rgb(216, 212, 212);
 }
-.section{
-  position: relative;
-  width: 100%;
-  display: block;
-} 
-.full-height{
-  min-height: 100vh;
+
+.section {
+    position: relative;
+    width: 100%;
+    display: block;
 }
+
+.full-height {
+    min-height: 100vh;
+}
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
-  position: absolute;
-  left: -9999px;
+[type="checkbox"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
 }
-.checkbox:checked + label,
-.checkbox:not(:checked) + label{
-  position: relative;
-  display: block;
-  text-align: center;
-  width: 60px;
-  height: 16px;
-  border-radius: 8px;
-  padding: 0;
-  margin: 10px auto;
-  cursor: pointer;
-  background-color: #dfdfdf;
+
+.checkbox:checked+label,
+.checkbox:not(:checked)+label {
+    position: relative;
+    display: block;
+    text-align: center;
+    width: 60px;
+    height: 16px;
+    border-radius: 8px;
+    padding: 0;
+    margin: 10px auto;
+    cursor: pointer;
+    background-color: #dfdfdf;
 }
-.checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before{
-  position: absolute;
-  display: block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  color: #ffeba7;
-  background-color: rgb(56, 56, 56);
-  content: url('https://api.iconify.design/mdi/duck.svg?color=yellow');
-  z-index: 20;
-  top: -10px;
-  left: -10px;
-  line-height: 36px;
-  text-align: center;
-  font-size: 24px;
-  transition: all 0.5s ease;
+
+.checkbox:checked+label:before,
+.checkbox:not(:checked)+label:before {
+    position: absolute;
+    display: block;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    color: #ffeba7;
+    background-color: rgb(56, 56, 56);
+    content: url('https://api.iconify.design/mdi/duck.svg?color=yellow');
+    z-index: 20;
+    top: -10px;
+    left: -10px;
+    line-height: 36px;
+    text-align: center;
+    font-size: 24px;
+    transition: all 0.5s ease;
 }
-.checkbox:checked + label:before {
-  transform: translateX(44px) rotate(360deg);
+
+.checkbox:checked+label:before {
+    transform: translateX(44px) rotate(360deg);
 }
 
 .card-3d-wrap {
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-  height: 400px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  perspective: 800px;
-  margin-top: 60px;
-}
-.card-3d-wrapper {
-  width: 100%;
-  height: 100%;
-  position:absolute;    
-  top: 0;
-  left: 0;  
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  transition: all 600ms ease-out; 
-}
-.card-front, .card-back {
-  width: 100%;
-  height: 100%;
-  background-color: #2a2b38;
-  background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
-  background-position: bottom center;
-  background-repeat: no-repeat;
-  background-size: 150%;
-  position: absolute;
-  border-radius: 6px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border: solid 1px rgb(66, 66, 66);
-}
-.card-back {
-  transform: rotateY(180deg);
-}
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
-  transform: rotateY(180deg);
-}
-.center-wrap{
-  position: absolute;
-  width: 100%;
-  padding: 0 35px;
-  top: 50%;
-  left: 0;
-  transform: translate3d(0, -50%, 35px) perspective(100px);
-  z-index: 20;
-  display: block;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    height: 400px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    perspective: 800px;
+    margin-top: 60px;
 }
 
-.form-group{ 
-  position: relative;
-  display: block;
+.card-3d-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    transition: all 600ms ease-out;
+}
+
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    background-color: #2a2b38;
+    background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 150%;
+    position: absolute;
+    border-radius: 6px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: solid 1px rgb(66, 66, 66);
+}
+
+.card-back {
+    transform: rotateY(180deg);
+}
+
+.checkbox:checked~.card-3d-wrap .card-3d-wrapper {
+    transform: rotateY(180deg);
+}
+
+.center-wrap {
+    position: absolute;
+    width: 100%;
+    padding: 0 35px;
+    top: 50%;
+    left: 0;
+    transform: translate3d(0, -50%, 35px) perspective(100px);
+    z-index: 20;
+    display: block;
+}
+
+.form-group {
+    position: relative;
+    display: block;
     margin: 0;
     padding: 0;
 }
+
 .form-style {
-  padding: 13px 20px;
-  padding-left: 55px;
-  height: 48px;
-  width: 100%;
-  font-weight: 500;
-  border-radius: 4px;
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: 0.5px;
-  outline: none;
-  color: #c4c3ca;
-  background-color: #2b2b2b;
-  border: solid 1px rgb(66, 66, 66);
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+    padding: 13px 20px;
+    padding-left: 55px;
+    height: 48px;
+    width: 100%;
+    font-weight: 500;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+    outline: none;
+    color: #c4c3ca;
+    background-color: #2b2b2b;
+    border: solid 1px rgb(66, 66, 66);
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+    box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
+
 .form-style:focus,
-.form-style:active{
-  outline: none;
-      border-color: #686868;
-      box-shadow: 0 0 2px #696969;
+.form-style:active {
+    outline: none;
+    border-color: #686868;
+    box-shadow: 0 0 2px #696969;
 }
+
 .input-icon {
-  position: absolute;
-  top: 0;
-  left: 18px;
-  height: 48px;
-  font-size: 24px;
-  line-height: 48px;
-  text-align: left;
-  color: #ffffff;
-  -webkit-transition: all 200ms linear;
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 48px;
+    font-size: 24px;
+    line-height: 48px;
+    text-align: left;
+    color: #ffffff;
+    -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
-.form-group input:-ms-input-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input::-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input::-webkit-input-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus:-ms-input-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus::-moz-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus:-moz-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus::-webkit-input-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
+.form-group input:-ms-input-placeholder {
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
-.btn{
-  border-radius: 4px;
-  height: 44px;
-  font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition : all 200ms linear;
-  transition: all 200ms linear;
-  padding: 0 30px;
-  letter-spacing: 1px;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  text-align: center;
-  border: none;
-  background-color: #ffffff;
-  color: #000000;
-  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+.form-group input::-moz-placeholder {
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
 }
+
+.form-group input:-moz-placeholder {
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input::-webkit-input-placeholder {
+    color: #c4c3ca;
+    opacity: 0.7;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus:-ms-input-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus::-moz-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus:-moz-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus::-webkit-input-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.btn {
+    border-radius: 4px;
+    height: 44px;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+    padding: 0 30px;
+    letter-spacing: 1px;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    text-align: center;
+    border: none;
+    background-color: #ffffff;
+    color: #000000;
+    box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
+}
+
 .input-icon-login {
-  position: absolute;
-  top: 0;
-  left: 18px;
-  height: 48px;
-  font-size: 24px;
-  line-height: 48px;
-  text-align: left;
-  color: #ffffff;
-  -webkit-transition: all 200ms linear;
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 48px;
+    font-size: 24px;
+    line-height: 48px;
+    text-align: left;
+    color: #ffffff;
+    -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
 .btn:active,
-.btn:focus{  
-  box-shadow: 0 8px 24px 0 rgb(182, 182, 182);
+.btn:focus {
+    box-shadow: 0 8px 24px 0 rgb(182, 182, 182);
 }
+
+
 /* .btn:hover{  
   background-color: rgba(16,39,112, 0.2);
   color: #ffffff;
@@ -282,74 +311,81 @@ h6 span{
 } */
 
 .logo-titulo {
-  font-size: 40px;
-  color: #ffd139;
-  border: solid 2px #ffdc69;
-  display: inline-block;
-  padding: 0px 5px 0px 5px;
-  margin-top: 20px;
-}
-
-.form-signup{
-  margin-top: -16px;
-}
-
-.fyp{
-  margin-top: 20px;
-  position: relative;
-  left: 100px;
-}
-
-.mb-4{
-  color: black;
-}
-
- /* Small - Tablets */
- @media screen and (min-width: 600px) {
-  .logo-titulo {
-    font-size: 50px;
+    font-size: 40px;
     color: #ffd139;
     border: solid 2px #ffdc69;
     display: inline-block;
     padding: 0px 5px 0px 5px;
-    margin-top: -8px;
-    margin-bottom: 35px;
-  }
-  span{
-    font-size: 1.5em;      
-  }
-  .mb-4{
-    color: #c4c3ca;
-  }
-
+    margin-top: 20px;
 }
+
+.form-signup {
+    margin-top: -16px;
+}
+
+.fyp {
+    margin-top: 20px;
+    position: relative;
+    left: 100px;
+}
+
+.mb-4 {
+    color: black;
+}
+
+
+/* Small - Tablets */
+
+@media screen and (min-width: 600px) {
+    .logo-titulo {
+        font-size: 50px;
+        color: #ffd139;
+        border: solid 2px #ffdc69;
+        display: inline-block;
+        padding: 0px 5px 0px 5px;
+        margin-top: -8px;
+        margin-bottom: 35px;
+    }
+    span {
+        font-size: 1.5em;
+    }
+    .mb-4 {
+        color: #c4c3ca;
+    }
+}
+
 
 /* Medium - Landscape tablets */
+
 @media screen and (min-width: 768px) {
-  .mb-4{
-    color: #c4c3ca;
-  }
+    .mb-4 {
+        color: #c4c3ca;
+    }
 }
 
+
 /* Large - notebooks/desktops */
+
 @media screen and (min-width: 1024px) {
-  .logo-titulo {
-    font-size: 50px;
-    color: #ffd139;
-    border: solid 2px #ffdc69;
-    display: inline-block;
-    padding: 0px 5px 0px 5px;
-    margin-top: 10px;
-    margin-bottom: 35px;
-  }
-  .mb-4{
-    color: #c4c3ca;
-  }
-}        
+    .logo-titulo {
+        font-size: 50px;
+        color: #ffd139;
+        border: solid 2px #ffdc69;
+        display: inline-block;
+        padding: 0px 5px 0px 5px;
+        margin-top: 10px;
+        margin-bottom: 35px;
+    }
+    .mb-4 {
+        color: #c4c3ca;
+    }
+}
+
 
 /* Extra large - notebooks/desktops */
+
 @media screen and (min-width: 1200px) {
-  .mb-4{
-    color: #c4c3ca;
-  }
+    .mb-4 {
+        color: #c4c3ca;
+    }
 }
