--- a/QUAC_SYS/client/src/components/Footer/styles.css
+++ b/QUAC_SYS/client/src/components/Footer/styles.css
@@ -15,6 +15,9 @@
     margin-bottom:0;
   }
   
+  .curve {
+    margin-top: 40px;
+  }
   .footer-basic li {
     padding:0 10px;
   }
@@ -72,7 +75,7 @@
 
 /* Small - Tablets */
 @media screen and (min-width: 600px) {
-  
+    
 }
 /* Medium - Landscape tablets */
 @media screen and (min-width: 768px) {
