--- a/QUAC_SYS/client/src/components/ModalError/index.css
+++ b/QUAC_SYS/client/src/components/ModalError/index.css
@@ -1,8 +1,8 @@
 .modal {
     position: fixed;
-    left: 30%;
-    top: 80px;
-    width: 40%;
+    left: 3rem;
+    top: 60px;
+    width: 260px;
     height: 5%;
     display: none;
     justify-content: center;
@@ -62,7 +62,7 @@
   
 .modal-content {
     background-color: rgb(190, 49, 49);
-    width: 50%;
+    width: 100%;
     padding: 0px;
     margin: 0;
     border-radius: 4px;
@@ -75,3 +75,74 @@
     color: white;
     margin: 0px;
 }
+@media screen and (min-width: 400px) {
+    .modal {
+        left: 4.5rem;
+    }
+}
+
+@media screen and (min-width: 445px) {
+    .modal {
+        left: 6rem;
+    }
+  }
+@media screen and (min-width: 540px) {
+    .modal {
+        left: 9rem;
+    }
+  }
+
+/* Small - Tablets */
+@media screen and (min-width: 600px) {
+  .modal {
+      left: 13rem;
+  }
+}
+/* Medium - Landscape tablets */
+@media screen and (min-width: 768px) {
+    .modal {
+        left: 16rem;
+    }
+}
+@media screen and (min-width: 768px) {
+    .modal {
+        left: 17rem;
+    }
+}
+@media screen and (min-width: 800px) {
+    .modal {
+        left: 19rem;
+    }
+}
+@media screen and (min-width: 900px) {
+    .modal {
+        left: 20.5rem;
+    }
+}
+@media screen and (min-width: 950px) {
+    .modal {
+        left: 22rem;
+    }
+}
+/* Large - notebooks/desktops */
+@media screen and (min-width: 1024px) {
+    .modal {
+        left: 24rem;
+    }
+}        
+@media screen and (min-width: 1100px) {
+    .modal {
+        left: 26rem;
+    }
+} 
+@media screen and (min-width: 1150px) {
+    .modal {
+        left: 28rem;
+    }
+}  
+/* Extra large - notebooks/desktops */
+@media screen and (min-width: 1200px) {
+    .modal {
+        left: 40%;
+    }
+}  
