--- a/QUAC_SYS/client/src/pages/DevDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/DevDashboard/index.css
@@ -12,7 +12,7 @@
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
-   background-color: rgba(128, 128, 128, 0.562); /* Black w/ opacity */
+   background-color: rgb(0, 0, 0); /* Black w/ opacity */
 }
 
 .modalContent{
