--- a/QUAC_SYS/client/src/pages/InitialPage/index.css
+++ b/QUAC_SYS/client/src/pages/InitialPage/index.css
@@ -1,10 +1,66 @@
-
-
-.tomato {
-    border: 1px solid tomato;
-  }
-
+.logo{
+  margin: 15px 0px 0px 15px;
+}
 .head {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.sec{
+  top: 300px;
+  left: 50px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 0px;
+  margin-top: 50px;
+}
+.info{
+  color: white;
+  
+}
+.div{
+  width: 500px;
+  
+  margin-left: 0px;
+  margin-top: 50px;
+  overflow: auto;
+  
+}
+
+@media screen and (max-width: 660px) {
+  .head{
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .logo-titulo {
+    font-size: 50px;
+    color: #ffd139;
+    border: solid 2px #ffdc69;
+    display: inline-block;
+    padding: 0px 5px 0px 5px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+    position: absolute;
+    left: 10px;
+  }
+  .navgation{
+    margin-top: 80px;
+  }
+}
+@media screen and (max-width: 348px) {
+  
+  .navgation{
+    margin-top: 150px;
+  }
 }
