--- a/QUAC_SYS/client/src/pages/DevDashboard/index.css
+++ b/QUAC_SYS/client/src/pages/DevDashboard/index.css
@@ -249,8 +249,10 @@
   }        
   
   /* Extra large - notebooks/desktops */
-  @media screen and (min-width: 1200px) {
-   
+  @media screen and (min-width: 1900px) {
+    .footer-dev{
+        margin-top: 120px;
+    }
   }  
 
 
