--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -7,10 +7,13 @@ body {
     color: #c4c3ca;
     overflow-x: hidden;
 }
-
-.footer-basic {
-    margin-top: 40px;
+.container-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 a {
     cursor: pointer;
@@ -49,9 +52,7 @@ h6 span {
 }
 
 .section {
-    position: relative;
     width: 100%;
-    display: block;
 }
 
 .full-height {
@@ -314,21 +315,17 @@ h6 span {
     box-shadow: 0 8px 24px 0 rgb(182, 182, 182);
 }
 
-
-/* .btn:hover{  
-  background-color: rgba(16,39,112, 0.2);
-  color: #ffffff;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
-} */
-
-.logo-titulo {
+.logo-titulo-quac {
+    margin-top: 30px;
+    display: inline-block;
     font-size: 40px;
     color: #ffd139;
     border: solid 2px #ffdc69;
-    display: inline-block;
     padding: 0px 5px 0px 5px;
-    margin-top: 20px;
+
 }
+
+
 
 .form-signup {
     margin-top: -16px;
@@ -340,8 +337,9 @@ h6 span {
     left: 100px;
 }
 
-.mb-4 {
-    color: black;
+.col-12{
+    width: 370px;
+
 }
 
 
@@ -363,7 +361,31 @@ h6 span {
     .mb-4 {
         color: #c4c3ca;
     }
+    .col-12{
+        width: 580px;
+    }
+    .card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    background-color: #2a2b38;
+    background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    border-radius: 6px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: solid 1px rgb(66, 66, 66);
 }
+
+}
+
 
 
 /* Medium - Landscape tablets */
