--- a/QUAC_SYS/client/src/pages/VerificarDistancia/styles.css
+++ b/QUAC_SYS/client/src/pages/VerificarDistancia/styles.css
@@ -1,6 +1,9 @@
 body{
     background-color: black;
 }
+.footer-verificar{
+    margin-top: 70px;
+}
 
 .btnhome {
     margin-top: 10px;
@@ -63,6 +66,9 @@ body{
         align-items: center;
         margin-bottom: 30px;
     }
+    .footer-verificar{
+        margin-top: 120px;
+    }
 }
 
 
@@ -111,5 +117,8 @@ body{
         color: #000000;
         box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
         align-items: center;
+    }
+    .footer-verificar{
+        margin-top: 100px;
     }
 }
