--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -107,6 +107,9 @@ h6 span {
     transform-style: preserve-3d;
     perspective: 800px;
     margin-top: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-3d-wrapper {
@@ -118,11 +121,14 @@ h6 span {
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     transition: all 600ms ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-front,
 .card-back {
-    width: 100%;
+    width: 33git0px;
     height: 100%;
     background-color: #2a2b38;
     background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
@@ -138,6 +144,7 @@ h6 span {
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
     border: solid 1px rgb(66, 66, 66);
+    
 }
 
 .card-back {
@@ -338,6 +345,7 @@ h6 span {
 
 .col-12{
     width: 370px;
+    
 
 }
 
@@ -365,7 +373,7 @@ h6 span {
     }
     .card-front,
 .card-back {
-    width: 100%;
+    width: 500px;
     height: 100%;
     background-color: #2a2b38;
     background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
