--- a/QUAC_SYS/client/src/components/TelaLogin/index.css
+++ b/QUAC_SYS/client/src/components/TelaLogin/index.css
@@ -128,7 +128,7 @@ h6 span {
 
 .card-front,
 .card-back {
-    width: 33git0px;
+    width: 330px;
     height: 100%;
     background-color: #2a2b38;
     background-image: url('https://dc687.4shared.com/img/GN0CpOzsea/s24/17c71c311f0/MicrosoftTeams-image?async&rand=0.9885102850891978');
